# parse_companies

./: README.md  config.py  main.py  pyproject.toml
src/: api.py  dbmanager.py  employer.py  utils.py  vacancy.py
tests/: conftest.py  test_api.py  test_dbmanager.py  test_employer.py  test_mixins.py  test_utils.py  test_vacancy.py
